# doctool

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LANGUINE_SUNSET.md  README.md  TESTING.md  doctool.config.toml
crates/doctool-cli/: Cargo.toml
crates/doctool-cli/src/: main.rs  output.rs  pnpm.rs
crates/doctool-cli/src/commands/: check.rs  diff.rs  doctor.rs  drift.rs  graph.rs  improve.rs  mod.rs  scaffold.rs  scan.rs  suggest.rs  sync_i18n.rs  translate_i18n.rs
crates/doctool-cli/tests/: cli_smoke.rs
crates/doctool-core/: Cargo.toml
crates/doctool-core/src/: config.rs  lib.rs  provenance.rs  rerank.rs  snapshot.rs
crates/doctool-core/src/context/: mod.rs
crates/doctool-core/src/diff/: mod.rs
crates/doctool-core/src/doctor/: mod.rs
crates/doctool-core/src/drift/: categories.rs  mod.rs  report.rs
crates/doctool-core/src/graph/: mod.rs  types.rs
crates/doctool-core/src/i18n/: lock.rs  mod.rs  sync.rs  translate.rs
crates/doctool-core/src/improve/: mod.rs
crates/doctool-core/src/index/: mod.rs
crates/doctool-core/src/intel/: buffer.rs  embedder.rs  global_index.rs  graph.rs  indexer.rs  language_detect.rs  loader.rs  mod.rs  parser.rs  search.rs  types.rs  utils.rs  vector_store.rs
crates/doctool-core/src/llm/: chunk.rs  client.rs  config.rs  mock.rs  mod.rs  prompt.rs  tokeniser.rs
crates/doctool-core/src/sources/: competitors.rs  mdx.rs  mod.rs  openapi.rs  sdk.rs
crates/doctool-core/src/sources/i18n/: locale.rs  (+1 more)
crates/doctool-core/src/suggest/: mod.rs
crates/doctool-core/tests/: drift_integration.rs  golden_drift.rs  i18n_integration.rs  sources_integration.rs
crates/doctool-core/tests/support/: mod.rs
(+12 files in other folders)
