[package]
name = "doctool-core"
version = "0.1.0"
description = "Documentation intelligence engine for doctool (lomi. monorepo)"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
fastembed = "4.4.0"
glob = "0.3"
ignore = "0.4"
md5 = "0.8"
petgraph = "0.6"
pulldown-cmark = "0.13"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
similar = "2.7"
thiserror = "1"
tokio = { version = "1", features = ["rt", "macros"] }
toml = "0.8"
tree-sitter = "0.24"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
